--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="pref_air_last_update" translatable="false">air_last_update</string>
     <string name="pref_document_page" translatable="false">document_page.</string>
     <string name="pref_wb_selected" translatable="false">wb_file</string>
+    <string name="pref_overlay_selected" translatable="false">map_overlay_country</string>
 
     <string name="folder_root" translatable="false">/EasyFlightBag</string>
     <string name="folder_airplanes" translatable="false">/Airplanes</string>
@@ -54,6 +55,7 @@
         Save or discract changes\n
         The trashcan icon allows you to delete the list</string>
 
+    <string name="country_all">All</string>
     <string name="country_at">Austria</string>
     <string name="country_cz">Czech Republic</string>
     <string name="country_sk">Slovakia</string>
@@ -230,6 +232,7 @@
     <string name="set_theme">Night mode</string>
     <string name="set_aip">AIP data</string>
     <string name="set_airspace">Airspace and Airports</string>
+    <string name="set_select_country">Show on map: </string>
     <string name="set_gps_mode">Get GPS data via Blutooth</string>
 
     <string name="service_aip_download" translatable="false">intent_aip_download</string>
