--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="calc_unit_lph" translatable="false">l/hour</string>
     <string name="calc_unit_gph" translatable="false">gal./hour</string>
     <string name="calc_unit_degree" translatable="false">°</string>
+    <string name="calc_unit_sat" translatable="false">%SAT</string>
 
     <string name="calc_eq_dme" translatable="false">DME</string>
     <string name="calc_eq_adf" translatable="false">ADF</string>
@@ -231,6 +232,7 @@
     <string name="calc_cg_limits">C.G. Limits</string>
     <string name="calc_arm">Arm</string>
     <string name="calc_arm_mm">Arm (mm)</string>
+    <string name="calc_arm_sat">Arm (%SAT)</string>
     <string name="calc_max_w_kg">Max (kg)</string>
     <string name="calc_weight_kg">Weight (kg)</string>
     <string name="calc_cap_l">Capacity (l)</string>
